--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                     <a href="#" target="_blank" rel="" class="main-btn">SKIP</a>
                 </div>
                 <div class="contact-type">
-                    <span>Rider>Account>Issue with login</span>
+                    <span>Rider > Account > Issue with login</span>
                 </div>
                 <div class="text-tags">
                     <span><svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 96 960 960" width="20"><path d="M7 809V159.6q0-27.455 18.688-46.027Q44.374 95 72 95h561.013q28.312 0 47.149 18.688Q699 132.375 699 160v399q0 27.625-18.975 46.312Q661.05 624 633 624H193L7 809Zm274 70q-28.85 0-46.925-18.975Q216 841.05 216 813V704h563V306h108.773q28.002 0 46.615 18.688Q953 343.375 953 371v687L774 879H281Z"/></svg>
                         Messaging</span>
-                    <span><svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 96 960 960" width="20"><path d="M272.309 436.001H602v-96q0-51-35.618-87.5-35.617-36.5-86.5-36.5-50.882 0-86.382 36.5-35.5 36.5-35.5 87.5h-77.999q0-84.922 58.455-143.46 58.454-58.538 141.77-58.538t141.545 58.698q58.228 58.698 58.228 143.3v96h7.692q38.527 0 64.417 25.891 25.891 25.89 25.891 64.417v367.382q0 38.527-25.903 64.417-25.902 25.891-64.445 25.891H272.025q-38.543 0-64.283-25.891-25.741-25.89-25.741-64.417V526.309q0-38.527 25.891-64.417 25.89-25.891 64.417-25.891Zm208.063 351.998q31.782 0 53.704-22.294 21.923-22.295 21.923-54.077 0-31.782-22.294-53.704-22.295-21.923-54.077-21.923-31.782 0-53.704 22.294-21.923 22.295-21.923 54.077 0 31.782 22.294 53.704 22.295 21.923 54.077 21.923Z"/></svg>
+                    <span class="ticket-status"><svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 96 960 960" width="20"><path d="M272.309 436.001H602v-96q0-51-35.618-87.5-35.617-36.5-86.5-36.5-50.882 0-86.382 36.5-35.5 36.5-35.5 87.5h-77.999q0-84.922 58.455-143.46 58.454-58.538 141.77-58.538t141.545 58.698q58.228 58.698 58.228 143.3v96h7.692q38.527 0 64.417 25.891 25.891 25.89 25.891 64.417v367.382q0 38.527-25.903 64.417-25.902 25.891-64.445 25.891H272.025q-38.543 0-64.283-25.891-25.741-25.89-25.741-64.417V526.309q0-38.527 25.891-64.417 25.89-25.891 64.417-25.891Zm208.063 351.998q31.782 0 53.704-22.294 21.923-22.295 21.923-54.077 0-31.782-22.294-53.704-22.295-21.923-54.077-21.923-31.782 0-53.704 22.294-21.923 22.295-21.923 54.077 0 31.782 22.294 53.704 22.295 21.923 54.077 21.923Z"/></svg>
                         Open</span>
                     <span><svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 96 960 960" width="20"><path d="M420 797h120V536H420v261Zm59.825-327q27.675 0 45.925-18.075Q544 433.851 544 406.175q0-27.675-18.075-45.925Q507.851 342 480.175 342q-27.675 0-45.925 18.075Q416 378.149 416 405.825q0 27.675 18.075 45.925Q452.149 470 479.825 470Zm.175 552q-92.64 0-174.467-34.604-81.828-34.603-142.077-94.852-60.249-60.249-94.852-142.077Q34 668.64 34 576q0-92.896 34.662-174.449 34.663-81.553 95.175-141.942 60.511-60.389 142.075-94.999Q387.476 130 480 130q92.886 0 174.476 34.593T796.44 259.56q60.374 60.374 94.967 141.99Q926 483.167 926 576.083q0 92.917-34.61 174.243t-94.999 141.837q-60.389 60.512-141.942 95.174Q572.896 1022 480 1022Z"/></svg>
                         Crearted at saudi arabia</span>
@@ -55,19 +55,27 @@
             </div>
             <div class="text-messaging">
                 <div class="action-bar">
-                    <p>i want to</p>
-                    <button>ban rider device</button>
-                    <button>lock account</button>
-                    <button>unban rider device</button>
+                    <div class="built-in-buttons">
+                        <p>i want to</p>
+                        <button>ban rider device</button>
+                        <button>lock account</button>
+                        <button>unban rider device</button>
+                        <button>ban payment method</button>
+                        <button>test</button>
+                        <button>unban rider device</button>
+                        <button>unban rider device</button>
+                    </div>
                     <p>or</p>
                     <div type="manu" class="action-bar-search">
                         <button>something else</button>
                     </div>
                 </div>
-                    <textarea name="massege" id="massege" cols="30" rows="10"></textarea>
-                    <button type="submit">Open</button>
-                    <button type="submit">Waiting</button>
-                    <button type="submit">Resolved</button>
+                    <div class="massageing-container">
+                        <textarea name="massege" id="massege" cols="30" rows="10"></textarea>
+                        <button type="submit">Open</button>
+                        <button type="submit">Waiting</button>
+                        <button type="submit">Resolved</button>
+                    </div>
                 </div>
             </div>
         </div>
