--- a/index.html
+++ b/index.html
@@ -60,21 +60,25 @@
                         <button>ban rider device</button>
                         <button>lock account</button>
                         <button>unban rider device</button>
-                        <button>ban payment method</button>
                         <button>test</button>
+                        <button>ban payment method</button>
                         <button>unban rider device</button>
                         <button>unban rider device</button>
                     </div>
-                    <p>or</p>
+                    
                     <div type="manu" class="action-bar-search">
+                        <p>or</p>
                         <button>something else</button>
                     </div>
                 </div>
                     <div class="massageing-container">
                         <textarea name="massege" id="massege" cols="30" rows="10"></textarea>
-                        <button type="submit">Open</button>
-                        <button type="submit">Waiting</button>
-                        <button type="submit">Resolved</button>
+                        <div class="ticket-status-buttons">
+                            <button type="submit"><svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48"><path d="M717-332 313-736q27-26 54.5-40.5T424-798v-26q0-23 16.5-39.5T480-880q23 0 39.5 16.5T536-824v26q78 17 129.5 82T717-566v234ZM160-200v-60h84v-315q0-14 1.5-27t5.5-26L75-805l42-42 726 727-42 42-122-122H160ZM480-80q-33 0-56.5-23.5T400-160h160q0 33-23.5 56.5T480-80Z"/></svg></button>
+                            <button type="submit"><div class="circle"></div></button>
+                            <button type="submit"><div class="circle"><div class="dot"></div><div class="dot"></div><div class="dot"></div></div> </button>
+                            <button type="submit"><div class="circle"><svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48"><path d="M378-232.434 140.434-470l57.131-57.131L378-346.696l383.435-383.435L818.566-673 378-232.434Z"/></svg></div> </button>
+                        </div>
                     </div>
                 </div>
             </div>
