--- a/index.html
+++ b/index.html
@@ -33,13 +33,16 @@
         <div class="text-container">
             <div class="text-container-head">
                 <div class="contact-name">
+                    <!-- here you will add the ticket name -->
                     <span>can't go online</span>
                     <a href="#" target="_blank" rel="" class="main-btn">SKIP</a>
                 </div>
                 <div class="contact-type">
+                    <!-- here you will add the contact type and edit it -->
                     <span>Rider > Account > Issue with login</span>
                 </div>
                 <div class="text-tags">
+                    <!-- here you will add the ticket tags (the channel it came from , the status , ticket country, loyality badge) -->
                     <span><svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 96 960 960" width="20"><path d="M7 809V159.6q0-27.455 18.688-46.027Q44.374 95 72 95h561.013q28.312 0 47.149 18.688Q699 132.375 699 160v399q0 27.625-18.975 46.312Q661.05 624 633 624H193L7 809Zm274 70q-28.85 0-46.925-18.975Q216 841.05 216 813V704h563V306h108.773q28.002 0 46.615 18.688Q953 343.375 953 371v687L774 879H281Z"/></svg>
                         Messaging</span>
                     <span class="ticket-status"><svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 96 960 960" width="20"><path d="M272.309 436.001H602v-96q0-51-35.618-87.5-35.617-36.5-86.5-36.5-50.882 0-86.382 36.5-35.5 36.5-35.5 87.5h-77.999q0-84.922 58.455-143.46 58.454-58.538 141.77-58.538t141.545 58.698q58.228 58.698 58.228 143.3v96h7.692q38.527 0 64.417 25.891 25.891 25.89 25.891 64.417v367.382q0 38.527-25.903 64.417-25.902 25.891-64.445 25.891H272.025q-38.543 0-64.283-25.891-25.741-25.89-25.741-64.417V526.309q0-38.527 25.891-64.417 25.89-25.891 64.417-25.891Zm208.063 351.998q31.782 0 53.704-22.294 21.923-22.295 21.923-54.077 0-31.782-22.294-53.704-22.295-21.923-54.077-21.923-31.782 0-53.704 22.294-21.923 22.295-21.923 54.077 0 31.782 22.294 53.704 22.295 21.923 54.077 21.923Z"/></svg>
@@ -49,13 +52,44 @@
                 </div>
             </div>
             <div class="text-container-body">
-                    <div class="rider"></div>
+                <!-- here is the chat and the actions between the rider or driver and agents and the actions agents takes -->
+                    <div class="rider">
+                        <div class="photo">
+                            <div class="user profile"><span class="postion-center">RD</span></div></div>
+                    </div>
+                    <div class="driver">
+                        <div class="photo">
+                            <div class="user profile">
+                                <span class="postion-center">RD</span>
+                            </div>
+                        </div>
+                            <div class="chat">
+                            الحقونمي الله اكبر                            الحقونمي الله اكبر
+                            الحقونمي الله اكبر
+                            الحقونمي الله اكبر
+                            الحقونمي الله اكبر
+                            الحقونمي الله اكبر                            الحقونمي الله اكبر
+                            الحقونمي الله اكبر
+                            الحقونمي الله اكبر
+                            الحقونمي الله اكبر
+                            الحقونمي الله اكبر
+                            الحقونمي الله اكبر
+                            الحقونمي الله اكبر
+
+                            <br>
+                            انا في المشكلة 
+                            <br>
+                            انا عايز مساعدة
+                            </div>
+                        
+                    </div>
                     <div class="agent"></div>
                     <div class="action"></div>
             </div>
             <div class="text-messaging">
                 <div class="action-bar">
                     <div class="built-in-buttons">
+                        <!-- here is the actions bar (add here the actions you want to add) -->
                         <p>i want to</p>
                         <button>ban rider device</button>
                         <button>lock account</button>
